- Fixed bug #45605 (array_uintersect_assoc gives incorrect error message)   (patch by ilewis at uk dot ibm dot com)